# AI4Heath

./: .gitignore  NEED_UPDATE.md  README.md  setup.cfg  testnet-validator.config.js
ai4h/base/: neuron.py  protocol.py
ai4h/core/miners/: miner.py
ai4h/core/validators/: validator.py
ai4h/neurons/: miner.py  validator.py
disease_prediction/base/: neuron.py
disease_prediction/core/miners/: miner.py
healthi/: config.py
healthi/base/: get_local_data.py  mock_data.py  protocol.py  utils.py
healthi/core/miners/: miner.py
healthi/core/miners/analyzers/disease_prediction/: model.py
healthi/core/miners/tasks/disease_prediction/: model.py
healthi/core/validators/: validator.py
healthi/core/validators/scoring/: process.py
healthi/neurons/: miner.py  validator.py
scripts/: auto_update.sh  auto_updater.py  run.sh  run_auto_updater.sh  run_neuron.sh
