[metadata]
name = healthi
version = 0.0.1
author = ox
author_email = haha@email.com
description = This project implements the healthi subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bittensor == 6.9.3
    torch
    gitpython
    python-dotenv
[options.packages.find]
include = llm_defender
